--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<button (click)="buttonClicked()"></button>
+<div>
+  <button mat-button (click)="buttonClicked()">click</button>
+  <input [(ngModel)]="val" />
+  <app-dashboard></app-dashboard>
+</div>
