--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,3 @@
-<div>
-  <button mat-button (click)="buttonClicked()">click</button>
-  <input [(ngModel)]="val" />
-  <app-dashboard></app-dashboard>
+<div class="my-container">
+  <button mat-button routerLink="/experiment">start expierment</button>
 </div>
