update the stepper and display the selected content

--- a/client/src/app/experiment/experiment.component.css
+++ b/client/src/app/experiment/experiment.component.css
@@ -5,3 +5,9 @@
   height: 100%;
   flex-direction: column;
 }
+.div-wrapper {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
