--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,17 +3,17 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="example-app-name">Who wrote our Bible</h1>
+    <h1 class="example-app-name">Corona Virus</h1>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container">
     <mat-sidenav #snav mode="side" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item> nav </a>
+        <a mat-list-item (click)="navToNewsPage()"> nav </a>
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content>
+    <mat-sidenav-content style="background-color: rgb(236, 240, 246)">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
