--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="my-container">
-  <button mat-button routerLink="/experiment">start expierment</button>
+  <button mat-button routerLink="">start expierment</button>
 </div>
