--- a/client/src/app/specific-details/specific-details.component.html
+++ b/client/src/app/specific-details/specific-details.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   <mat-card-content>
     <h2>{{ specificDetailsData.details }}</h2>
-    <h2>{{ specificDetailsData.newDetails }}</h2>
+    <h2> number of  {{ specificDetailsData.newDetails }}</h2>
   </mat-card-content>
   <mat-card-actions>
     {{ specificDetailsData.subDetails }}
