--- a/client/src/app/specific-details/specific-details.component.html
+++ b/client/src/app/specific-details/specific-details.component.html
@@ -5,9 +5,9 @@
   </mat-card-header>
   <mat-card-content>
     <h2>{{ specificDetailsData.details }}</h2>
-    <h2> number of  {{ specificDetailsData.newDetails }}</h2>
+    <h4>{{ specificDetailsData.newDetails }}</h4>
   </mat-card-content>
   <mat-card-actions>
-    {{ specificDetailsData.subDetails }}
+    <h6>{{ specificDetailsData.subDetails }}</h6>
   </mat-card-actions>
 </mat-card>
