--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -7,3 +7,7 @@
     </div>
   </div>
 </div>
+<div>
+  <app-pie-isolated-varifed-doctors [data]="isolatedDoctorsPieData">
+  </app-pie-isolated-varifed-doctors>
+</div>
