add more graphs

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -27,3 +27,6 @@
     [graphData]="vaccinatedPerAgeGraphData"
   ></app-precentage-vaccinatede-age-graph>
 </div>
+<div>
+  <app-hard-count-graph [graphData]="hardCountDataGraph"></app-hard-count-graph>
+</div>
