--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,7 +9,10 @@
   <mat-sidenav-container class="example-sidenav-container">
     <mat-sidenav #snav mode="side" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item (click)="navToNewsPage()"> nav </a>
+        <a mat-list-item routerLink=""> Dashboard </a>
+      </mat-nav-list>
+      <mat-nav-list>
+        <a mat-list-item routerLink="exposureMap"> Exposure Map </a>
       </mat-nav-list>
     </mat-sidenav>
 
