--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -7,26 +7,51 @@
     </div>
   </div>
 </div>
-<div>
-  <app-pie-isolated-varifed-doctors [data]="isolatedDoctorsPieData">
-  </app-pie-isolated-varifed-doctors>
+<div class="d-flex justify-content-center">
+  <div class="row">
+    <div class="col">
+      <app-positive-precentage-tests-graph
+        [view]="view"
+        [graphData]="graphPrecentOfPositiveTests"
+      ></app-positive-precentage-tests-graph>
+    </div>
+    <div class="col">
+      <app-dead-graph [view]="view" [graphData]="graphDataDeadPerDay">
+      </app-dead-graph>
+    </div>
+  </div>
 </div>
-<div>
-  <app-vaccinated-graph [graphData]="graphDataVacinated"></app-vaccinated-graph>
+<div class="d-flex justify-content-center">
+  <div class="row">
+    <div class="col">
+      <app-vaccinated-graph
+        [view]="view"
+        [graphData]="graphDataVacinated"
+      ></app-vaccinated-graph>
+    </div>
+    <div class="col">
+      <app-precentage-vaccinatede-age-graph
+        [view]="view"
+        [graphData]="vaccinatedPerAgeGraphData"
+      ></app-precentage-vaccinatede-age-graph>
+    </div>
+  </div>
 </div>
-<div>
-  <app-dead-graph [graphData]="graphDataDeadPerDay"> </app-dead-graph>
-</div>
-<div>
-  <app-positive-precentage-tests-graph
-    [graphData]="graphPrecentOfPositiveTests"
-  ></app-positive-precentage-tests-graph>
-</div>
-<div>
-  <app-precentage-vaccinatede-age-graph
-    [graphData]="vaccinatedPerAgeGraphData"
-  ></app-precentage-vaccinatede-age-graph>
-</div>
-<div>
-  <app-hard-count-graph [graphData]="hardCountDataGraph"></app-hard-count-graph>
+
+<div class="d-flex justify-content-center">
+  <div class="row">
+    <div class="col">
+      <app-hard-count-graph
+        [view]="view"
+        [graphData]="hardCountDataGraph"
+      ></app-hard-count-graph>
+    </div>
+    <div class="col">
+      <app-pie-isolated-varifed-doctors
+        [view]="view"
+        [data]="isolatedDoctorsPieData"
+      >
+      </app-pie-isolated-varifed-doctors>
+    </div>
+  </div>
 </div>
