--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,10 +9,19 @@
   <mat-sidenav-container class="example-sidenav-container">
     <mat-sidenav #snav mode="side" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerLink=""> Dashboard </a>
+        <a mat-list-item routerLink="dashboard"
+          ><mat-icon>dashboard</mat-icon> &nbsp; Dashboard
+        </a>
       </mat-nav-list>
       <mat-nav-list>
-        <a mat-list-item routerLink="exposureMap"> Exposure Map </a>
+        <a mat-list-item routerLink="exposureMap"
+          ><mat-icon> map</mat-icon> &nbsp; Exposure Map
+        </a>
+      </mat-nav-list>
+      <mat-nav-list>
+        <a mat-list-item (click)="openGoogleNews()"
+          ><mat-icon>open_in_new</mat-icon> &nbsp; Covide 19 Google news</a
+        >
       </mat-nav-list>
     </mat-sidenav>
 
@@ -21,3 +30,5 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
+
+<>
