--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="example-app-name">Corona Virus</h1>
+    <h1 class="example-app-name">Israel Corona Dashboard</h1>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container">
