--- a/client/src/app/corona-stats/corona-stats.component.html
+++ b/client/src/app/corona-stats/corona-stats.component.html
@@ -1,8 +1,10 @@
-<ngx-charts-number-card
-  [view]="view2"
-  [scheme]="colorScheme"
-  [results]="graphData"
-  [cardColor]="cardColor"
-  (select)="onSelect($event)"
->
-</ngx-charts-number-card>
+<div (window:resize)="onResize($event)">
+  <ngx-charts-number-card
+    [view]="view2"
+    [scheme]="colorScheme"
+    [results]="graphData"
+    [cardColor]="cardColor"
+    (select)="onSelect($event)"
+  >
+  </ngx-charts-number-card>
+</div>
