--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 </div> -->
 <br />
 <div class="d-flex justify-content-center">
-  <mat-card style="background-color: ghostwhite">
+  <mat-card class="card-center" style="background-color: ghostwhite">
     <mat-card-header>
       <mat-card-title>Corona Stats</mat-card-title>
     </mat-card-header>
@@ -28,7 +28,7 @@
 <br />
 <div>
   <div class="d-flex justify-content-center">
-    <mat-card style="background-color: ghostwhite">
+    <mat-card class="card-center" style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Positive Tests & Death Stats</mat-card-title>
       </mat-card-header>
@@ -50,7 +50,7 @@
   </div>
   <br />
   <div class="d-flex justify-content-center">
-    <mat-card style="background-color: ghostwhite">
+    <mat-card class="card-center" style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Vaccines</mat-card-title>
       </mat-card-header>
@@ -73,7 +73,7 @@
   </div>
   <br />
   <div class="d-flex justify-content-center">
-    <mat-card style="background-color: ghostwhite">
+    <mat-card class="card-center" style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Hard patients & Medical staff condition</mat-card-title>
       </mat-card-header>
