--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -9,11 +9,13 @@
 </div> -->
 <br />
 <div class="d-flex justify-content-center">
-  <mat-card class="card-center" style="background-color: ghostwhite">
+  <mat-card style="background-color: ghostwhite">
     <mat-card-header>
       <mat-card-title>Corona Stats</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+
+    <mat-card-content class="card-center">
+      <br />
       <div class="row">
         <div class="col">
           <app-corona-stats
@@ -28,11 +30,11 @@
 <br />
 <div>
   <div class="d-flex justify-content-center">
-    <mat-card class="card-center" style="background-color: ghostwhite">
+    <mat-card style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Positive Tests & Death Stats</mat-card-title>
       </mat-card-header>
-      <mat-card-content>
+      <mat-card-content class="card-center">
         <div class="row">
           <div class="col">
             <app-positive-precentage-tests-graph
@@ -50,11 +52,11 @@
   </div>
   <br />
   <div class="d-flex justify-content-center">
-    <mat-card class="card-center" style="background-color: ghostwhite">
+    <mat-card style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Vaccines</mat-card-title>
       </mat-card-header>
-      <mat-card-content>
+      <mat-card-content class="card-center">
         <div class="row">
           <div class="col">
             <app-vaccinated-graph
@@ -73,11 +75,11 @@
   </div>
   <br />
   <div class="d-flex justify-content-center">
-    <mat-card class="card-center" style="background-color: ghostwhite">
+    <mat-card style="background-color: ghostwhite">
       <mat-card-header>
         <mat-card-title>Hard patients & Medical staff condition</mat-card-title>
       </mat-card-header>
-      <mat-card-content>
+      <mat-card-content class="card-center">
         <div class="row">
           <div class="col">
             <app-hard-count-graph
