--- a/client/src/app/insulation/insulation.component.html
+++ b/client/src/app/insulation/insulation.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Isolation Form</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div class="col-md-6">
+      <div class="col">
         <div class="row">
           <mat-form-field>
             <mat-label>Full Name:</mat-label>
