--- a/client/src/app/corona-information/corona-information.component.html
+++ b/client/src/app/corona-information/corona-information.component.html
@@ -1,1 +1,186 @@
-<p>corona-information works!</p>
+<div class="test right-text" dir="rtl">
+  <mat-card style="background-color: ghostwhite">
+    <mat-card-header>
+      <mat-card-title>מידע אודות הנגיף</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div>
+        <h3
+          role="document"
+          aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."
+        >
+          איך ומתי התפרץ נגיף הקורונה
+        </h3>
+        <div>
+          באמצע דצמבר 2019 החלו דיווחים בעיר ווהאן, במחוז חוביי שבסין, על עלייה
+          בתחלואה בדלקת ריאות ממקור נגיפי, מהם בודד זן חדש של נגיף קורונה המכונה
+          nCoV2019. זן זה שונה מנגיפי ה-SARS וה-MERS אשר משתייכים גם הם למשפחת
+          נגיפי הקורונה. במרץ 2020 הכריז ארגון הבריאות העולמי על התפרצות הקורונה
+          כפנדמיה (מגפה עולמית).
+        </div>
+        <div>
+          הנגיף גורם לתסמינים דמויי שפעת, הכוללים בדרך כלל חום גבוה, חולשה
+          ושיעול יבש. כ-15% מהחולים מפתחים מחלה קשה יותר שמתבטאת בקשיי נשימה.
+        </div>
+        <div>
+          שיעור התמותה המוערך הוא כ-2% מהחולים, אם כי מאחר ורבים אינם מפתחים
+          תסמינים, ניתן להניח כי שיעור התמותה מבין הנדבקים הוא נמוך יותר. יחד עם
+          זאת,&nbsp;עדיין מוקדם מכדי לאמוד אותו.
+        </div>
+        <h3
+          aria-hidden="true"
+          role="document"
+          aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."
+        >
+          קבוצות סיכון
+        </h3>
+        <div>
+          מבוגרים, חולים במחלות כרוניות (מחלות לב, ריאה, סוכרת וכד׳) ואנשים
+          הסובלים מפגיעה במערכת החיסון נוטים יותר לפתח מחלה קשה.
+        </div>
+        <h3
+          aria-hidden="true"
+          role="document"
+          aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."
+        >
+          <span style="font-family: Arial, sans-serif; color: #1f497d"
+            ><span
+              style="
+                font-size: 11pt;
+                font-family: Arial, sans-serif;
+                color: #1f497d;
+              "
+            ></span
+          ></span>
+        </h3>
+      </div>
+    </mat-card-content>
+    <mat-card-actions> </mat-card-actions>
+  </mat-card>
+
+  <mat-card style="background-color: ghostwhite">
+    <mat-card-header>
+      <mat-card-title>מניעה</mat-card-title>
+    </mat-card-header>
+    <mat-card-content> </mat-card-content>
+    <div>
+      <div
+        style="
+          height: 100px;
+          width: 100px;
+          position: absolute;
+          left: 20px;
+          top: 20px;
+        "
+      >
+        <strong></strong>
+      </div>
+      <h3
+        aria-hidden="true"
+        role="document"
+        aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."
+      >
+        מה אפשר לעשות כדי להימנע מהדבקה בקורונה?
+      </h3>
+      <div>
+        <strong>היגיינה</strong> - יש להקפיד על רחיצת ידיים עם מים וסבון או
+        בחומר חיטוי על בסיס אלכוהול לעיתים קרובות, להימנע מלחיצת ידיים וממגע עם
+        אזור הפנים, להימנע משיתוף כלי אכילה ואוכל מפה לפה, ולהקפיד על שיעול
+        ועיטוש למרפק או ממחטה חד פעמית (ולהשליך אותה לאחר מכן לאשפה). יש לדאוג
+        לאוורור מקסימלי של הבית ולחטא ידיות ודלתות.
+      </div>
+      <div>
+        <strong>מסכה - </strong>משרד הבריאות מנחה את הציבור לחבוש מסכת פה-אף בכל
+        עת במרחב הציבורי בכדי להקטין את הסיכון להדביק ולהידבק. בבית ובעבודה
+        (בחדר בודד) אין צורך להשתמש במסכה. סוגי המסכות המתאימים לאוכלוסייה
+        הכללית הינם מסכה רפואית (מסכת מנתחים), מסכת אף-פה לא רפואית או מסכת בד
+        רב-פעמית. מסכת N95 ודומיה (FFP2, KN95) אינה נדרשת לציבור הרחב ומיועדת
+        להגנת צוותים רפואיים. מסכה עם שסתום אינה מתאימה ואף יכולה להעלות את
+        הסיכון להדביק אחרים. במידת הצורך אפשר לשמור מסכה רפואית או מסחרית לשימוש
+        חוזר במקום נקי ומאוורר, רחוק ממגע יד מקרי, ולהניח אותה על נייר סופג נקי.
+        מסכה בלויה, מלוכלכת או קרועה יש להשליך לפח.
+      </div>
+      <div>
+        <br /><strong>מזון ומשקאות - </strong>על פי המידע הקיים היום, לא דווח על
+        העברת נגיפי קורונה באמצעות מזון או אריזות מזון. יחד עם זאת, חשוב להקפיד
+        על נהלי היגיינה בעת הטיפול במזון או בהכנתו:
+      </div>
+      <ul>
+        <li>שטיפת ידיים ומשטחים לעתים קרובות</li>
+        <li>הפרדה בין בשר נא למאכלים אחרים</li>
+        <li>בישול מלא, והכנסת המזון לקירור מיד בתום הבישול.</li>
+        <li>אין מניעה להמשיך לשתות מי ברז כרגיל, אין צורך בהרתחה.</li>
+      </ul>
+      <h3
+        aria-hidden="true"
+        role="document"
+        aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."
+      >
+        <br />הנחיות להתנהלות יומיומית
+      </h3>
+      <div>
+        <strong>יציאה מהבית</strong> - אין לצאת מהבית, מלבד במצבים המחייבים זאת:
+        עבודה בהתאם להגבלות משרד הבריאות, הצטיידות במזון, תרופות, שירותים
+        רפואיים ושירותים חיוניים אחרים. ההנחיות וההגבלות על הציבור בישראל
+        מתעדכנות באופן קבוע באתר משרד הבריאות &gt;
+      </div>
+      <div>
+        <strong>אוכלוסיות בסיכון</strong> - קשישים ואנשים עם מחלות כרוניות קשות
+        בכל גיל, מחלות ממושכות של דרכי הנשימה כולל אסטמה, מחלות אוטואימוניות,
+        מחלות לב וכלי דם, סוכרת, מחלות ומצבים הפוגעים במערכת החיסון, חולים
+        במחלות ממאירות ומחלות עם פגיעה במערכת החיסון, יש להקפיד ולהימנע ככל
+        האפשר מלצאת מהבית ומאירוח אנשים בבית, חוץ משירותים חיוניים.
+      </div>
+      <div>
+        <strong>הגעה למרפאה או לבדיקות רפואיות</strong> - אין להגיע למרפאה מבלי
+        שנערך בירור אם אכן צריך להגיע. יש ליצור קשר בטלפון או באמצעים מקוונים
+        אחרים. אם נקבע תור לבדיקת רופא או טיפול רפואי לפני החלת ההנחיות החדשות,
+        יש לשקול הגעה באופן פרטני, אך רק לאחר יצירת קשר עם המרפאה ובירור המצב.
+        מכבי מעמידה לרשותכם מגוון אפשרויות ליצירת קשר מרחוק &gt;
+      </div>
+      <div>
+        <strong
+          >*יש להקפיד על שהייה בבידוד ביתי למעט יציאה לצורך ביצוע הבדיקה
+          הרפואית.</strong
+        >
+      </div>
+      <div>
+        <strong>נסיעות לחו"ל</strong> - נכון להיום, לא מתבצעות טיסות לחו"ל. חזרה
+        לארץ מותרת לכל אזרח או תושב ישראל, אך הם מחויבים בבידוד בית עם חזרתם.
+        אנשים שאינם אזרחי ישראל לא יורשו להיכנס לישראל.
+      </div>
+    </div>
+    <mat-card-actions> </mat-card-actions>
+  </mat-card>
+
+  <mat-card style="background-color: ghostwhite">
+    <mat-card-header>
+      <mat-card-title>תסמינים</mat-card-title>
+    </mat-card-header>
+    <mat-card-content
+      ><div>
+        <div>רבים מהנדבקים אינם מפתחים תסמינים כלל.</div>
+        <div>
+          בקרב החולים, הנגיף גורם לתסמינים דמויי שפעת הכוללים חום גבוה, עייפות
+          ושיעול יבש. בחלק מהמקרים תסמינים אלו מסתבכים לקשיי נשימה, דלקת ריאות
+          ואף מוות.
+        </div>
+        <div>
+          ההערכה היא כי עד 20% מהחולים המאובחנים מפתחים סיבוכים, ושיעור התמותה
+          הוא כ-2% מהחולים, אך יש שונות גדולה בנתונים המגיעים ממדינות שונות.
+        </div>
+        <div>
+          <strong
+            >המחלה קשה יותר בקרב מבוגרים ואנשים הסובלים ממחלות כרוניות ומפגיעה
+            במערכת החיסון.</strong
+          >
+        </div>
+        <div>
+          כמו כן, מאחר שרבים מהנדבקים אינם מפתחים תסמינים, ניתן להניח כי שיעור
+          התמותה מבין הנדבקים נמוך יותר.
+        </div>
+      </div>
+    </mat-card-content>
+    <mat-card-actions> </mat-card-actions>
+  </mat-card>
+</div>
