--- a/client/src/app/insulation/insulation.component.html
+++ b/client/src/app/insulation/insulation.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="!showEndDate" class="d-flex justify-content-center">
+<div
+  *ngIf="!showEndDate"
+  class="d-flex justify-content-center align-items-center full-size"
+>
   <mat-card style="background-color: ghostwhite">
     <mat-card-header>
       <mat-card-title>Isolation Form</mat-card-title>
