--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -45,7 +45,7 @@
       </mat-nav-list>
       <mat-nav-list>
         <a mat-list-item (click)="openGoogleNews()"
-          ><mat-icon>open_in_new</mat-icon> &nbsp; Covide 19 Google news</a
+          ><mat-icon>open_in_new</mat-icon> &nbsp; Covid 19 Google news</a
         >
       </mat-nav-list>
     </mat-sidenav>
